tests/verify/fail/assert-bool.rs
// error-pattern: error[P0003]

extern crate prusti_contracts;

fn foo(x: bool) {
    assert!(x);
}

fn main() {

}
